Updated changelogs to 2.44.0

--- a/content/6.Release Notes/1.index.md
+++ b/content/6.Release Notes/1.index.md
@@ -5,6 +5,15 @@ meta_title: Release Notes | pdfRest API Toolkit Container
 meta_description: Release Notes pertain to all deployment types of the pdfRest API Toolkit, including Cloud and Container, though all features noted may not be available in all products.
 ---
 
+## [2.44.0] - [January 9, 2026]
+
+- Flatten Forms API: Added `as_printed` parameter for flattening XFA forms
+- Redact PDF: Output quality improvement and bugfix
+
+## [2.43.0] - [December 19, 2025]
+
+- Updated endpoints to include `inputId` in responses that previous included just `warning:` messages
+
 ## [2.42.0] - [December 17, 2025]
 
 - Various bugfixes for Compress PDF, Convert to PDF, Convert to Word/Excel/Powerpoint, Convert to PDF/A
@@ -31,3 +40,40 @@ meta_description: Release Notes pertain to all deployment types of the pdfRest A
 - Initial release to Docker Hub
 - Improved error handling for Translate PDF, Summarize PDF, and PDF to Markdown APIs.
 - Security update to address CVE.
+
+## [2.36.0] - [Oct 17, 2025]
+
+- Markdown API: Return `warning:` message if no text content detected in input
+- Various improvements in error handling
+- Removed `pm2` dependency
+
+## [2.35.0] - [October 8, 2025]
+
+- **Translate PDF API: Released `/translate-pdf-text` endpoint**
+- Extract Text API: Added `pages` parameter
+- Summarize PDF API: Plaintext bugfix for /summarized-pdf-text
+- Reduced Docker container image size
+
+## [2.33.0] - [October 2, 2025]
+
+- Summarize PDF: Added support for `.md` and `.txt` files alongside other improvements
+- Extract Text API: Updates and improvements
+- Delete API: Bugfixes and error handling improvements
+
+## [2.31.0] - [September 18, 2025]
+
+- **Summarize PDF API: Released `/summarized-pdf-text` endpoint**
+- Updated backend services powering various Cloud API endpoints
+
+## [2.29.1] - [August 20, 2025]
+
+- Reduced Container file size and build improvements
+- Database query updates improve request latency in Cloud API
+- Redact PDF: Added type checks of `type` and `value`
+
+## [2.28.2] - [August 7, 2025]
+
+- Resource API: Added file lifecycle information to `GET /resource` calls using `?format=info`
+- Watermark PDF API: Added ability to place watermarks behind page content
+- Delete Files API: Updated error handling for `/delete` endpoint
+
