Created Storage Guide documentation

--- a/content/3.pdfRest API Toolkit Container/2.Deploy Container API.md
+++ b/content/3.pdfRest API Toolkit Container/2.Deploy Container API.md
@@ -30,7 +30,7 @@ The `docker compose up -d` command starts the containers in the background and l
 
 A simple [Docker Compose](https://docs.docker.com/get-started/workshop/08_using_compose/) file to define the pdfRest API Toolkit Container can be found below:
 
-```bash
+```yaml
 services:
   pdfrest:
     platform: linux/amd64
@@ -61,7 +61,7 @@ You can change the listener to a port other than 80, but 3000 is mandatory for t
 
 If you require shared storage between multiple pdfRest containers, set up a shared volume as described in the [Docker storage volume documentation](https://docs.docker.com/storage/volumes) and configure the `volumes` section of the YAML to mount that volume as shown below:
 
-```bash
+```yaml
 volumes:
   - <your_volume>:/opt/datalogics/public
 ```
