--- a/content/3.pdfRest API Toolkit Container/5.Custom Compression Profiles.md
+++ b/content/3.pdfRest API Toolkit Container/5.Custom Compression Profiles.md
@@ -1,3 +1,10 @@
+---
+title: Custom Compression Profiles in Container
+description: Configuring custom compression profiles in the pdfRest API Toolkit Container.
+meta_title: Compression Profiles | pdfRest API Toolkit Container
+meta_description: Configuring custom compression profiles in the pdfRest API Toolkit Container.
+---
+
 ## PDF Compression Levels
 
 When you use the compression API, select the level of compression you want to apply to your PDF file in the `compression_level` setting.
